iguana/src/generator/snapshots/iguana__generator__scanner_gen__tests__match_alt.snap
---
source: iguana/src/generator/scanner_gen.rs
expression: code
---
fn test_match(i: u32) -> Option<u32> {
    (|i| { self.match_char(i, 'a') })(i).or_else(|| { self.match_char(i, 'b') })
}
